# d4explorer

./: .nojekyll  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: build.yml  ci.yml
docs/: _quarto.yml  index.qmd
reference/: app.html  cache.html  config.html  d4utils.commands.html  d4utils.d4iter.html  index.html  logging.html  main.html  metadata.html  model.coverage.html  model.d4.html  model.feature.html  model.metadata.html  model.ranges.html  tools.d4filter.html  tools.summarize.html
scripts/: prepare.sh
site_libs/bootstrap/: bootstrap-7e785ef313a9a772ab263598d0b9e60c.min.css
src/coveda/: __main__.py  app.py  datastore.py  main.py  views.py
src/coveda/tools/: d4filter.py
src/d4explorer/: __init__.py  __main__.py  app.py  cache.py  config.py  datastore.py  logging.py  main.py  metadata.py  model.py  scratch.py  views.py
src/d4explorer/d4utils/: commands.py  d4iter.py
src/d4explorer/model/: coverage.py  d4.py  feature.py  metadata.py  ranges.py
src/d4explorer/schema/: data.schema.json  datacollection.schema.json
src/d4explorer/tools/: d4filter.py  summarize.py
src/d4explorer/views/: config.py  d4.py
tests/: conftest.py  test_cache.py  test_d4utils.py  test_datastore.py  test_feature.py  test_metadata.py  test_model.py  test_ranges.py
tests/data/: annotation.gff.gz.gzi  count.d4  exons.bed  genes.bed  introns.bed  s1.per-base.d4  s2.per-base.d4  s3.per-base.d4  s4.per-base.d4  s5.per-base.d4  s6.per-base.d4  s7.per-base.d4
