[project]
name = "d4explorer"
description = "Visual exploration of d4 coverage files"
authors = [
    { name = "Per Unneberg", email = "per.unneberg@scilifelab.se" }
]
dependencies = [
    "panel~=1.6.1",
    "hvplot~=0.11.0",
    "holoviews~=1.20.0",
    "daiquiri~=3.2.5.1",
    "diskcache~=5.6.3",
    "pyd4~=0.3.9",
    "click~=8.1.7",
    "scipy~=1.14.1",
    "watchfiles~=1.0.4",
    "humanize~=4.11.0",
    "param~=2.2.0",
]
readme = "README.md"
requires-python = ">= 3.11"
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.vcs]
version-file = "src/d4explorer/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/d4explorer"]

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter-console~=6.6.3",
    "notebook~=7.2.2",
    "pytest~=8.3.4",
    "pyright~=1.1.384",
]

[project.scripts]
"d4explorer" = "d4explorer:__main__.cli"
d4explorer-d4filter = "d4explorer.tools.d4filter:cli"

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = [
  "A",    # warn about shadowing built-ins
  "E",    # style stuff, whitespaces
  "F",    # important pyflakes lints
  "I",    # import sorting
  "N",    # naming
  "T100", # breakpoints (probably don't want these in prod!)
]

[tool.ruff.lint.isort]
# so it knows to group first-party stuff last
known-first-party = ["d4explorer"]


[tool.pyright]
venvPath = "."          # rye installs the venv in the current dir
venv = ".venv"          #       in a folder called `.venv`
include = ["src"]
pythonVersion = "3.11"  # if library, specify the _lowest_ you support
reportMissingTypeStubs = false
reportAttributeAccessIssue = false
reportCallIssue = false
reportOptionalMemberAccess = false
reportAssignmentType = false

[tool.rye.scripts]
fmt = "rye fmt"
lint = "rye lint --fix"
check = "pyright"
test = "rye test"
all = { chain = ["fmt", "lint", "test"] }

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore src/d4explorer/main.py"
